--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,1 +1,42 @@
-<p>Helo</p>
+<div class="me-inf_wrapper">
+    <div class="me-inf container">
+        <p><a href="" name="meInf"></a></p>
+        <h3>Обо мне</h3>
+        <div class="me-inf_content">
+            <div class="me-inf_text">
+                <div class="me-advantages">
+                    <ul>
+                        <li>
+                            <h5>Образование</h5>
+                            <p>
+                                Симферопольский государственный университет им ВИ Вернадского, специальность -
+                                математик, преподаватель.
+                            </p>
+                        </li>
+                        <li>
+                            <h5>Опыт работы</h5>
+                            <p>
+                                С 1999 года преподаю математику старшеклассникам в школе.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Сейчас занимаюсь
+                                частным репетиторством.</p>
+                        </li>
+                        <li>
+                            <p></p>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+            <div class="me-inf_img">
+                <div class="me-inf_img"><img src="/me.jpg" alt="me"></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="me-advantages_wrapper">
+
+</div>
