--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/mobile.css">
     <meta name="description"
-        content="Бетон в Дубках - производитель лучшего качественного бетона в Симферополе. М200 - от 3500р М250 - от 3700р. Без посредников.">
+        content="Репетитор по математике Алие Рустемовна - один из лучших репетиторов в Симферополе и Симферопольском районе. Огромный опыт подготовки детей к ОГЭ и ЕГЭ а так же повышения общей успеваемости.">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>{{title}}</title>
 </head>
