--- a/views/main.hbs
+++ b/views/main.hbs
@@ -1,34 +1,30 @@
+<p><a href="" name="meInf"></a></p>
 <div class="me-inf_wrapper">
     <div class="me-inf container">
-        <p><a href="" name="meInf"></a></p>
         <h3>Обо мне</h3>
         <div class="me-inf_content">
             <div class="me-inf_text">
-                <div class="me-advantages">
-                    <ul>
-                        <li>
-                            <h5>Образование</h5>
-                            <p>
-                                Симферопольский государственный университет им ВИ Вернадского, специальность -
-                                математик, преподаватель.
-                            </p>
-                        </li>
-                        <li>
-                            <h5>Опыт работы</h5>
-                            <p>
-                                С 1999 года преподаю математику старшеклассникам в школе.
-                            </p>
-                        </li>
-                        <li>
-                            <p>Сейчас занимаюсь
-                                частным репетиторством.</p>
-                        </li>
-                        <li>
-                            <p></p>
-                        </li>
-                    </ul>
-                </div>
-
+                <ul class="list-Shad">
+                    <li>
+                        <h5>Образование</h5>
+                        <p>
+                            Симферопольский государственный университет им ВИ Вернадского, специальность -
+                            математик, преподаватель.
+                        </p>
+                    </li>
+                    <li>
+                        <h5>Опыт работы</h5>
+                        <p>
+                            С 1999 года преподаю математику в школе, имею высшую квалификационную
+                            категорию. В 2010 году начала преподавать математику индивидуально и готовить детей к
+                            поступлению в вузы.
+                        </p>
+                    </li>
+                    <li>
+                        <p>Я являюсь членом ГЭК на ЕГЭ, экспертом по проверке ОГЭ и поэтому всегда
+                            владею самой актуальной информацией по поводу экзаменов.</p>
+                    </li>
+                </ul>
             </div>
             <div class="me-inf_img">
                 <div class="me-inf_img"><img src="/me.jpg" alt="me"></div>
@@ -38,5 +34,58 @@
 </div>
 
 <div class="me-advantages_wrapper">
+    <div class="me-advantages container">
+        <h3>Что получат дети занимаясь со мной?</h3>
+        <div class="me-advantages_content">
+            <ul class="list-Shad">
+                <li>
+                    <p>Понимание и устранение пробелов в знанях по школьной программе.</p>
+                </li>
+                <li>
+                    <p>Объяснение материала на доступном для ребенка языке.</p>
+                </li>
 
+                <li>
+                    <p>Теплая рабочая атмосфера и хорошее настроение.</p>
+                </li>
+                <li>
+                    <p>Успешная подготовка к поступлению и сдаче экзаменов ОГЭ и ЕГЭ.</p>
+                </li>
+                <li>
+                    <p>Высокая мотивация для достижения всех поставленных целей.</p>
+                </li>
+                <li>
+                    <p>Раскрытие скрытого потенциала, который есть у каждого ребенка.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="contacts_wrapper">
+    <div class="contacts container">
+        <h3>Контакты</h3>
+        <div class="contacts_group">
+            <a href="tel:+79785654278">
+                <div class="contacts_tel">
+                    <span>
+                        <h3>Телефон</h3>
+                    </span>
+                    <span>
+                        <h3 class="">+7 978 565-42-78</h3>
+                    </span>
+                </div>
+            </a>
+            <a href="https://vk.com/aliebelualova" class="">
+                <div class="contacts_tel">
+                    <span>
+                        <h3>vk</h3>
+                    </span>
+                    <span>
+                        <h3>Vk.com/aliebelualova</h3>
+                    </span>
+                </div>
+            </a>
+        </div>
+    </div>
 </div>
